Fixed menu, made it responsive to be displayed normally on mobile devices. Started filling homepage with info about sonification

--- a/source/css/main.css
+++ b/source/css/main.css
@@ -4,11 +4,10 @@
   min-height: 100%;
   min-width: 100%;
   background-color: white; /* Needs a background or else the nav will show through */
-  position: relative;
-  top: 0;
-  bottom: 100%;
+  position: fixed;
+  top: 7%;
   left: 0;
-  z-index: 1;
+  z-index: -1;
   
   /* color of gradient */
   padding: 4em;
